{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 12,
  "lineage": "d610b9fe-846b-e377-776e-859336b39553",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-01-07T07:42:22.909-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/utkarshtrial/global/firewalls/allow-lb",
            "log_config": [],
            "name": "allow-lb",
            "network": "https://www.googleapis.com/compute/v1/projects/utkarshtrial/global/networks/private-vpc",
            "params": [],
            "priority": 1000,
            "project": "utkarshtrial",
            "self_link": "https://www.googleapis.com/compute/v1/projects/utkarshtrial/global/firewalls/allow-lb",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "web"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/utkarshtrial/regions/us-central1/instanceGroups/web-mig",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2026-01-07T07:43:24.008-08:00",
            "enable_cdn": false,
            "external_managed_migration_testing_percentage": 0,
            "fingerprint": "2XdR9T8hKQI=",
            "generated_id": 3118968793464029683,
            "health_checks": [
              "projects/utkarshtrial/global/healthChecks/http-hc"
            ],
            "id": "projects/utkarshtrial/global/backendServices/web-backend",
            "load_balancing_scheme": "EXTERNAL",
            "name": "web-backend",
            "port_name": "http",
            "project": "utkarshtrial",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/utkarshtrial/global/backendServices/web-backend",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute.google_compute_instance_template.template",
            "module.compute.google_compute_region_instance_group_manager.mig",
            "module.load_balancer.google_compute_health_check.hc",
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "external_managed_backend_bucket_migration_testing_percentage": 0,
            "forwarding_rule_id": 2936256091508687235,
            "id": "projects/utkarshtrial/global/forwardingRules/http-forwarding-rule",
            "ip_address": "34.49.8.80",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "http-forwarding-rule",
            "network_tier": "PREMIUM",
            "port_range": "80-80",
            "project": "utkarshtrial",
            "self_link": "https://www.googleapis.com/compute/v1/projects/utkarshtrial/global/forwardingRules/http-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/utkarshtrial/global/targetHttpProxies/http-proxy"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute.google_compute_instance_template.template",
            "module.compute.google_compute_region_instance_group_manager.mig",
            "module.load_balancer.google_compute_backend_service.backend",
            "module.load_balancer.google_compute_health_check.hc",
            "module.load_balancer.google_compute_target_http_proxy.proxy",
            "module.load_balancer.google_compute_url_map.url_map",
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-01-07T07:44:30.997-08:00",
            "fingerprint": "fAc3qNu_UWA=",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/utkarshtrial/global/targetHttpProxies/http-proxy",
            "name": "http-proxy",
            "project": "utkarshtrial",
            "proxy_bind": false,
            "proxy_id": 6574477029917105,
            "self_link": "https://www.googleapis.com/compute/v1/projects/utkarshtrial/global/targetHttpProxies/http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/utkarshtrial/global/urlMaps/web-map"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute.google_compute_instance_template.template",
            "module.compute.google_compute_region_instance_group_manager.mig",
            "module.load_balancer.google_compute_backend_service.backend",
            "module.load_balancer.google_compute_health_check.hc",
            "module.load_balancer.google_compute_url_map.url_map",
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-01-07T07:44:16.778-08:00",
            "default_custom_error_response_policy": [],
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/utkarshtrial/global/backendServices/web-backend",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "JHPTGBYX8RY=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/utkarshtrial/global/urlMaps/web-map",
            "map_id": 4757099513778520511,
            "name": "web-map",
            "path_matcher": [],
            "project": "utkarshtrial",
            "self_link": "https://www.googleapis.com/compute/v1/projects/utkarshtrial/global/urlMaps/web-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute.google_compute_instance_template.template",
            "module.compute.google_compute_region_instance_group_manager.mig",
            "module.load_balancer.google_compute_backend_service.backend",
            "module.load_balancer.google_compute_health_check.hc",
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-01-07T07:42:23.743-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/utkarshtrial/regions/us-central1/routers/nat-router",
            "name": "nat-router",
            "network": "https://www.googleapis.com/compute/v1/projects/utkarshtrial/global/networks/private-vpc",
            "project": "utkarshtrial",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/utkarshtrial/regions/us-central1/routers/nat-router"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "utkarshtrial/us-central1/nat-router/cloud-nat",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "cloud-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "utkarshtrial",
            "region": "us-central1",
            "router": "nat-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "type": "PUBLIC",
            "udp_idle_timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.nat.google_compute_router.router",
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_bgp_always_compare_med": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/utkarshtrial/global/networks/private-vpc",
            "mtu": 0,
            "name": "private-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "5896802715366047777",
            "numeric_id": "5896802715366047777",
            "project": "utkarshtrial",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/utkarshtrial/global/networks/private-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-01-07T07:42:23.721-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/utkarshtrial/regions/us-central1/subnetworks/private-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "private-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/utkarshtrial/global/networks/private-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "utkarshtrial",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/utkarshtrial/regions/us-central1/subnetworks/private-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 7930930335199772720
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}